--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
-  <title>Lista de Productos</title>
+  <title>Inicio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <div class="container">
-    <h1>Lista de Productos</h1>
-    <div class="controls">
-      <button id="reloadBtn">Recargar Datos</button>
-    </div>
-    <div id="statusMessage">Cargando datos...</div>
-    <div class="table-container">
-      <table id="productsTable">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Nombre</th>
-            <th>Precio</th>
-            <th>Stock</th>
-            <th>Fecha Creación</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
+  <div class="contenedor">
+    <h1>Bienvenida Mariana 👋</h1>
+    <nav>
+      
+        <ul>
+          <li><a href="usuarios.html">Gestión de Usuarios</a></li>
+          <li><a href="productos.html">Gestión de Productos</a></li>
+          <li><a href="peliculas.html">Gestión de Películas</a></li>
+        </ul>
+      
+    </nav>
   </div>
-  <script type="module" src="/js/main.js"></script>
 </body>
+
 </html>
